# entlib-native

./: .dockerignore  .gitignore  AGES.md  AGES_EN.md  BENCHMARK.md  COMPLIANCE.md  COMPLIANCE_EN.md  CONTRIBUTION.md  CONTRIBUTION_EN.md  Cargo.toml  Cross.toml  INTRODUCTION.md  INTRODUCTION_EN.md  LICENSE  Makefile  NIST-ACVP.md  README.md  README_EN.md  SECURE_NOTE.md  SECURITY.md  SECURITY_DISCUSSION.md  SECURITY_DISCUSSION_EN.md  SECURITY_EN.md  criterion.toml
.cargo/: config.toml
.github/workflows/: cc-constant-time-audit.yml  secure_release.yml  verify_ct_asm.yml
benchmarks/: README.md  base64-bench.md  ct-bench.md
canary/: Cargo.toml  README.md  check_zeroize.sh
canary/src/: main.rs
canary/tests/: absolute.rs  zeroize_jo.rs  zeroize_multi_page.rs  zeroize_ro.rs
cli/: Cargo.toml
cli/src/: input.rs  main.rs
cli/src/cmd/: argon2id.rs  base64.rs  blake.rs  hex.rs  mldsa.rs  mlkem.rs  mod.rs  pkcs8.rs  sha2.rs  sha3.rs
core/base/: Cargo.toml
core/base/src/: error.rs
core/base64/: Cargo.toml
core/base64/src/: base64.rs  lib.rs
core/base64/tests/: base64_test.rs
core/constant-time/: Cargo.toml  README.md  README_EN.md  build.rs
core/constant-time/benches/: dudect_audit.rs
core/constant-time/dudect/: main.rs
core/constant-time/saw/: Dockerfile  compose.yaml  docker_verify.sh  entrypoint.sh  verify.saw
core/constant-time/saw/specs/: ConstantTime.cry
core/constant-time/src/: choice.rs  lib.rs  traits.rs  wrapper.rs
core/constant-time/tests/: taint_audit.rs  taint_shim.c  trans_ct_eq.asm
core/crypto/: Cargo.toml
core/crypto/src/: lib.rs  sha2.rs  sha2_256.rs  sha2_512.rs
core/ffi/: Cargo.toml
core/ffi/benches/: ffi_base64_bench.rs  ffi_wipe_bench.rs
core/ffi/src/: base64_ffi.rs  lib.rs  secure_buffer.rs  sha2.rs  wipe_ffi.rs
core/helper/: Cargo.toml  constant_time_asm.md
core/helper/benches/: base64_bench.rs  ct_ops_security.rs  ct_ops_throughput.rs  secure_buffer_bench.rs
core/helper/src/: base64.rs  constant_time.rs  constant_time_asm.rs  lib.rs  secure_buffer.rs
core/helper/tests/: base64_test.rs  constant_time_asm_test.rs  constant_time_test.rs  ct_cross_validation.rs
core/hex/: Cargo.toml
core/hex/src/: hex.rs  lib.rs
core/result/: Cargo.toml
core/result/src/: lib.rs
core/rng/: Cargo.toml  README.md  README_EN.md
core/rng/src/: hash_drbg.rs  lib.rs  os_entropy.rs
core/rng/tests/: hash_drbg_test.rs
core/secure-buffer/: Cargo.toml  README.md  README_EN.md
core/secure-buffer/src/: buffer.rs  lib.rs  memory.rs  zeroize.rs
crypto/aes/: Cargo.toml  README.md  README_EN.md
crypto/aes/src/: aes.rs  cbc.rs  error.rs  gcm.rs  ghash.rs  lib.rs
crypto/aes/tests/: aes_test.rs
crypto/argon2id/: Cargo.toml  README.md  README_EN.md
crypto/argon2id/src/: blamka.rs  lib.rs
crypto/argon2id/tests/: argon2id_test.rs
crypto/armor/: Cargo.toml
crypto/armor/src/: error.rs  lib.rs
crypto/armor/src/asn1/: error.rs  mod.rs  oid.rs  tag.rs
crypto/armor/src/der/: error.rs  length.rs  mod.rs  reader.rs  writer.rs
crypto/armor/src/io/: error.rs  mod.rs  reader.rs  writer.rs
crypto/armor/src/pem/: decoder.rs  encoder.rs  error.rs  filter.rs  label.rs  mod.rs
crypto/armor/tests/: der_test.rs
crypto/base64/: Cargo.toml
crypto/base64/benches/: base64_bench.rs
crypto/base64/src/: base64.rs
crypto/blake/: Cargo.toml  README.md  README_EN.md
crypto/blake/src/: blake2b.rs  blake3.rs  file.rs  lib.rs
crypto/blake/tests/: blake2b_test.rs  blake3_test.rs
crypto/chacha20/: Cargo.toml
crypto/chacha20/benches/: chacha20_bench.rs
crypto/chacha20/src/: chacha20.rs  chacha20_state.rs  lib.rs  poly1305.rs
crypto/chacha20/tests/: chacha20_test.rs
crypto/constant-time/: Cargo.toml  constant_time.md
crypto/constant-time/benches/: ct_ops_security.rs  ct_ops_throughput.rs
crypto/constant-time/src/: constant_time.rs  constant_time_asm.rs  lib.rs
crypto/constant-time/tests/: constant_time_asm_test.rs  constant_time_test.rs  ct_cross_validation.rs
crypto/core-secure/: Cargo.toml
crypto/core-secure/benches/: secure_buffer_bench.rs
crypto/digital-signature/: Cargo.toml
crypto/hex/: Cargo.toml
crypto/hex/src/: hex.rs
crypto/hkdf/: Cargo.toml
crypto/hmac/: Cargo.toml
crypto/hmac/src/: hmac.rs  lib.rs
crypto/hmac/tests/: hmac_kcmvp_cavp.rs  hmac_test.rs
crypto/key-establishment/: Cargo.toml
crypto/mldsa/: Cargo.toml  README.md  README_EN.md
crypto/mldsa/src/: _mldsa_test.rs  error.rs  field.rs  lib.rs  mldsa.rs  mldsa_keys.rs  mldsa_sign.rs  ntt.rs  pack.rs  poly.rs  sample.rs
crypto/mldsa/tests/: mldsa_test.rs  ntt_c_test.rs
crypto/mlkem/: Cargo.toml  README.md  README_EN.md
crypto/mlkem/src/: encode.rs  error.rs  field.rs  k_pke.rs  lib.rs  ntt.rs  poly.rs  sample.rs
crypto/pbkdf2/: Cargo.toml
crypto/pkcs8/: Cargo.toml
crypto/pkcs8/src/: algorithm.rs  error.rs  lib.rs  oid.rs
crypto/pkcs8/tests/: pkcs8_test.rs
crypto/rng/: Cargo.toml
crypto/rng/benches/: anu_qrng_bench.rs
crypto/rng/src/: anu_qrng.rs  base_rng.rs  lib.rs  mixed.rs
crypto/rng/tests/: anu_qrng_test.rs  hw_based_rng_test.rs  mixed_rng_test.rs
crypto/sha2/: Cargo.toml
crypto/sha3/: Cargo.toml
crypto/sha3/benches/: sha3_bench.rs
crypto/sha3/src/: api.rs  file.rs  keccak.rs  lib.rs
crypto/sha3/tests/: file_hash_test.rs  sha3_kcvmp_cavp.rs  sha3_test.rs  shake_test.rs
crypto/tls/: Cargo.toml
internal/ffi/: Cargo.toml
internal/ffi/src/: base64_ffi.rs  chacha20_ffi.rs  hex_ffi.rs  lib.rs  rng_ffi.rs  secure_buffer_ffi.rs  sha2_ffi.rs  sha3_ffi.rs  sha_ffi.rs
internal/quantum-util/: Cargo.toml
public/: RELEASE_HASHES.txt  RELEASE_HASHES.txt.asc  public-key.asc
scripts/: build-all.sh  build-linux.sh  build-macos.sh  build-windows.sh  catch_hex_dudect_audit.sh  docker-build.sh  extract_ct_symbols.sh  verify_ct_asm.sh
src/: lib.rs
src/acvp_slh_dsa/: README.md  adrs.rs  common.rs  fors.rs  helper.rs  ht.rs  mod.rs  slh_dsa_context.rs  slh_dsa_params.rs  wots_plus.rs  xmss.rs
src/helper/: mod.rs  rng.rs  unsafe_slice.rs
src/modules/: ml_dsa.rs  ml_kem.rs  mod.rs  secure_wipe.rs  x25519.rs
(+27 files in other folders)
