[workspace]
members = ["internal/*", "crypto/*", "core/*", "cli"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
authors = ["Q. T. Felix <qtfelix@qu4nt.space>"]
license = "MIT LICENSE"

[profile.release]
#strip = true
# 패닉 발생 시 스택 풀기를 비활성화하여 메모리 상태가
# 외부에 노출되거나 조작될 가능성을 차단할 필요 있음
#panic = "abort"
#lto = true
#codegen-units = 1
#strip = true

[profile.dev]
panic = "abort"

[workspace.dependencies]
### INTERNAL DEPENDENCIES ###
entlib-native-ffi =          { path = "internal/ffi",          version = "2.0.0" }
entlib-native-quantum-util = { path = "internal/quantum-util", version = "2.0.0" }
### CORE DEPENDENCIES ###
entlib-native-rng =           { path = "core/rng",           version = "2.0.0" }
entlib-native-hex =           { path = "core/hex",           version = "2.0.0" }
entlib-native-result =        { path = "core/result",        version = "2.0.0" }
entlib-native-base64 =        { path = "core/base64",        version = "2.0.0" }
entlib-native-secure-buffer = { path = "core/secure-buffer", version = "2.0.0" }
entlib-native-constant-time = { path = "core/constant-time", version = "2.0.0" }
### INTERNAL CRYPTO DEPENDENCIES ###
entlib-native-tls =               { path = "crypto/tls",               version = "2.0.0" }
entlib-native-aes =               { path = "crypto/aes",               version = "2.0.0" }
entlib-native-hkdf =              { path = "crypto/hkdf",              version = "2.0.0" }
entlib-native-hmac =              { path = "crypto/hmac",              version = "2.0.0" }
entlib-native-sha2 =              { path = "crypto/sha2",              version = "2.0.0" }
entlib-native-sha3 =              { path = "crypto/sha3",              version = "2.0.0" }
entlib-native-blake =             { path = "crypto/blake",             version = "2.0.0" }
entlib-native-armor =             { path = "crypto/armor",             version = "2.0.0" }
entlib-native-mldsa =             { path = "crypto/mldsa",             version = "2.0.0" }
entlib-native-pbkdf2 =            { path = "crypto/pbkdf2",            version = "2.0.0" }
entlib-native-argon2id =          { path = "crypto/argon2id",          version = "2.0.0" }
entlib-native-chacha20 =          { path = "crypto/chacha20",          version = "2.0.0" }
entlib-native-key-establishment = { path = "crypto/key-establishment", version = "2.0.0" }
entlib-native-digital-signature = { path = "crypto/digital-signature", version = "2.0.0" }
