[package]
name = "entlib-native-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "entlib-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
entlib-native-argon2id.workspace = true
entlib-native-base64.workspace = true
entlib-native-blake.workspace = true
entlib-native-hex.workspace = true
entlib-native-sha2.workspace = true
entlib-native-sha3.workspace = true
entlib-native-mldsa.workspace = true
entlib-native-mlkem.workspace = true
entlib-native-pkcs8.workspace = true
entlib-native-rng.workspace = true
entlib-native-secure-buffer.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"