[package]
name = "entlib-native-base64"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
entlib-native-constant-time.workspace = true
entlib-native-secure-buffer = { workspace = true, features = ["std"] }
entlib-native-base.workspace = true