[package]
name = "entlib-native-constant-time"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
dudect-bencher = "0.6.0"
rand = "0.10.0"

[build-dependencies]
cc = "1.0.106"

[features]
default = []
audit_mode = []
valgrind_taint_audit = []

[[bench]]
name = "dudect_audit"
harness = false

[[test]]
name = "taint_audit"
path = "tests/taint_audit.rs"