[package]
name = "entlib-native-constant-time"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

[build-dependencies]
cc = "1.0.106"

[features]
default = []
audit_mode = []
saw_verify = ["audit_mode"]
valgrind_taint_audit = []

[[bin]]
name = "dudect-eval"
path = "dudect/main.rs"

[[test]]
name = "taint_audit"
path = "tests/taint_audit.rs"