[package]
name = "entlib-native-rng"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
entlib-native-secure-buffer.workspace = true
entlib-native-sha2.workspace = true
entlib-native-sha3.workspace = true
entlib-native-base.workspace = true