[package]
name = "entlib-native-mldsa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
entlib-native-constant-time.workspace = true
entlib-native-rng.workspace = true
entlib-native-secure-buffer.workspace = true
entlib-native-sha3.workspace = true