[package]
name = "entlib-native-mlkem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
entlib-native-base.workspace = true
entlib-native-constant-time.workspace = true
entlib-native-rng.workspace = true
entlib-native-secure-buffer.workspace = true
entlib-native-sha3.workspace = true
