[package]
name = "entlib-native-sha3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
entlib-native-constant-time.workspace = true
entlib-native-secure-buffer.workspace = true

[dev-dependencies]
#criterion = { version = "0.8.2", features = ["html_reports"] }

#[[bin]]
#name = "cavp_sha3_bit"
#path = "test-vectors/bin/cavp_sha3_bit.rs"
#
#[[bin]]
#name = "cavp_sha3_byte"
#path = "test-vectors/bin/cavp_sha3_byte.rs"
#
#[[bin]]
#name = "cavp_shake_xof_bit"
#path = "test-vectors/bin/cavp_shake_xof_bit.rs"
#
#[[bin]]
#name = "cavp_shake_xof_byte"
#path = "test-vectors/bin/cavp_shake_xof_byte.rs"
#
#[[bin]]
#name = "kcmvp_sha3_byte"
#path = "test-vectors/bin/kcmvp_sha3_byte.rs"

#[[bench]]
#name = "sha3_bench"
#harness = false
