[package]
name = "entlib-native-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

# 패닉 발생 시 스택 풀기를 비활성화하여 메모리 상태가
# 외부에 노출되거나 조작될 가능성을 차단할 필요 있음
[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.dev]
panic = "abort"

[dependencies]
entlib-native-result.workspace = true
entlib-native-base64.workspace = true
entlib-native-secure-buffer.workspace = true
entlib-native-hex.workspace = true
entlib-native-sha2.workspace = true
entlib-native-sha3.workspace = true