[package]
name = "entlib-native-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
entlib-native-result.workspace = true
entlib-native-base64.workspace = true
entlib-native-secure-buffer.workspace = true
entlib-native-hex.workspace = true
entlib-native-sha2.workspace = true
entlib-native-sha3.workspace = true
entlib-native-constant-time.workspace = true
entlib-native-base.workspace = true